--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Your Videos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css/first.css">
+    <link rel="stylesheet" href="styles/first.css">
 </head>
 <body>
-    <main class="d-flex justify-content-center align-items-center min-vh-100">
+    <main class="d-flex justify-content-center align-items-center min-vh-100 w-100">
         <div class="d-flex">
-            <input type="text" name="URL" id="URL" placeholder="Youtube Link" style="height: auto;" required class="form-control">
+            <input type="text" name="URL" id="URL" placeholder="Youtube Link" style="width: 100%;" required class="form-control">
             <button type="button" class="btn btn-primary" id="search">Search</button>
         </div>
       
-        <div class="mt-3 kelly d-none" id="kelly" >
+        <div class="loader d-none mt-3" id="loader"></div>
+        <div class="mt-3 results d-none" id="results" >
             <img id="thumbnail" src="" class="img-responsive ml-4"alt="">
-        
             <ul>
                 <li ><h5 id="title"></h5></li>
                 <li><a href="" id="vid-download" target="_blank">Download Video</a></li>
-                <li><a href="">Download Audio</a></li>
+                <li><a href="" download>Download Audio</a></li>
             </ul>
         </div>
     </main>
-    <script src="main.js/first.js"></script>
+    <script src="js/first.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
